Started implementing REST API over Socket and ServerSocket using HttpRaw library.